# Advanced-Haskell-Scripting-Guide

./: .gitignore  README.md  betterthanbash.cabal  haskellscripting.cabal
examples/2/: 1.cleanup.hs  2.cleanup.hs  2.cleanup.sh  3.cleanup.hs  3.cleanup.sh
test/: Spec.hs
