name:           betterthanbash
version:        0.0.0.0
homepage:       https://github.com/cblp/betterthanbash
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       System
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010

executable betterthanbash-exe
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , betterthanbash
    default-language: Haskell2010

test-suite betterthanbash-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , betterthanbash
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
    type:     git
    location: https://github.com/cblp/betterthanbash
