name:           haskellscripting
version:        0.0.0.0
homepage:       https://github.com/cblp/Advanced-Haskell-Scripting-Guide
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       System
build-type:     Simple
cabal-version:  >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Lib
    build-depends:    base >= 4.7 && < 5
    default-language: Haskell2010
    ghc-options:      -Wall -Werror

executable haskellscripting-exe
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base
                    , haskellscripting
    default-language: Haskell2010

test-suite haskellscripting-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , haskellscripting
                    , directory
                    , MissingH
                    , process
                    , safe
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

source-repository head
    type:     git
    location: https://github.com/cblp/Advanced-Haskell-Scripting-Guide
